# atlas

./: .clippy.toml  .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  PROGRESS.md  README.md  SYSTEM_MAP.md  WEB.md  eslint.config.ts  features.md  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  system_map.index.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: cedar-check.yml  pages.yml
adapters/idb/: package.json
adapters/node/: README.md  package.json
adapters/policy-cedar/: package.json  tsconfig.json
adapters/policy-stub/: package.json
apps/admin/: index.html  package.json  vite.config.ts
apps/authoring/: package.json  vite.config.ts
apps/control-plane/: Cargo.toml  Dockerfile
apps/control-plane/src/: main.rs
apps/control-plane/src/handlers/: mod.rs  seed.rs  tenant.rs
apps/sandbox/: index.html  playwright.config.ts
apps/server/: README.md  package.json  vitest.config.ts
bundles/standard/: package.json
crates/: CLAUDE.md
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs  memory.rs  postgres_registry.rs  postgres_search.rs  postgres_tenant_db.rs
crates/adapters/tests/: cache_integration_tests.rs
crates/atlas-compiler/: Cargo.toml
crates/atlas_config/: Cargo.toml
crates/atlasctl/: Cargo.toml  README.md
crates/atlasctl/src/: http.rs  main.rs  types.rs
crates/catalog/: Cargo.toml
crates/catalog/src/: errors.rs  lib.rs
crates/catalog/src/domain/: asset.rs  attribute.rs  family.rs  mod.rs  policy.rs  seed_package.rs  taxonomy.rs  unit.rs  variant.rs
crates/catalog/src/handlers/: family_publish.rs  mod.rs  seed_package_apply.rs
crates/catalog/src/projections/: family_detail.rs  mod.rs  search_documents.rs  taxonomy_navigation.rs  variant_matrix.rs
crates/catalog/src/queries/: family_detail.rs  mod.rs  search.rs  taxonomy_nodes.rs  variant_table.rs
crates/control_plane_db/: Cargo.toml
crates/control_plane_db/migrations/: 20250101000002_create_tables.sql  20260210000001_create_page_render_trees.sql
crates/control_plane_db/src/: lib.rs  models.rs
crates/core/: Cargo.toml
crates/core/src/: cache.rs  lib.rs  logging.rs  policy.rs  types.rs  validation.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: lib.rs
crates/ingress/: CLAUDE.md  Cargo.toml
crates/ingress/src/: authn.rs  authz.rs  bootstrap.rs  errors.rs  events.rs  lib.rs  main.rs  metrics.rs  render_tree_store.rs  schema.rs  sse.rs  worker.rs  ws.rs
crates/ingress/static/: viewer.html
crates/ingress/tests/: authn_tests.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: cache_helpers.rs  lib.rs  ports.rs  registry.rs  singleflight.rs
crates/spec_validate/: Cargo.toml
crates/spec_validate/src/: discover.rs  json.rs  lib.rs  main.rs
crates/spec_validate/src/validate/: analytics_events.rs  event_envelope.rs  mod.rs  module_manifest.rs  search_documents.rs
crates/tenant_db/: Cargo.toml  README.md
crates/wasm_runtime/: Cargo.toml
crates/wasm_runtime/src/: lib.rs  render_tree.rs
crates/workers/: Cargo.toml
crates/workers/src/: main.rs  metrics.rs
deploy/: index.html
frontend/: CLAUDE.md  FEATURES.md  eslint.config.js  eslint.config.ts  global.d.ts  jsconfig.json  package.json  playwright.config.js  playwright.config.ts  playwright.itest.config.js  playwright.itest.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
frontend/.claude/: settings.local.json
frontend/deploy/: index.html
frontend/playwright-report/: index.html
frontend/test-results/: .last-run.json
frontend/test-setup/: linkedom-shims.ts
infra/: CLAUDE.md
infra/compose/: .env.example  README.md  compose.control-plane.yml  compose.dev.yml  compose.itest-infra.yml  compose.keycloak.yml  compose.observability.yml  docker-bake.itest.hcl  docker-compose.itest.yml  pg_hba.conf  pgadmin-pgpass  pgadmin-servers.json  postgres-fatal-monitor.sh  tmpclaude-df33-cwd
infra/docker/: Dockerfile.ingress  Dockerfile.itest  Dockerfile.workers  entrypoint-itest.sh  healthcheck.sh
modules/authz/: package.json
modules/catalog/: package.json
modules/content-pages/: package.json
plugins/demo-transform/: Cargo.toml
ports/: package.json  tsconfig.json
ports/src/: control-plane-registry.ts  dispatcher.ts  handler-registry.ts  index.ts  policy-engine.ts
ports/test/: dispatcher.test.ts
scripts/: README.md  db-lifecycle.sh  itest-lifecycle.sh  logs.ps1  logs.sh  test-authn.ps1  test-authn.sh  test-authz.ps1  test-authz.sh  wait-for-healthy.sh
specs/: CLAUDE.md  LEXICON.md  README.md  SUMMARY.md  architecture.md  conformance.md  error_taxonomy.json  glossary.md  index.md  normative_requirements.md  spec_surface_inventory.md
specs/book/: 404.html  book.toml  glossary.html  toc.html  (+5 more)
test-setup/: linkedom-shims.ts
tests/blackbox/: .env.aws  CLAUDE.md  Cargo.toml  README.md
tests/blackbox/harness/: assertions.rs  client.rs  config.rs  fixtures.rs  keycloak.rs  mod.rs
tests/blackbox/suites/: authentication_test.rs  authorization_test.rs  catalog_badge_family_test.rs  catalog_search_test.rs  closed_loop_test.rs  health_test.rs  idempotency_test.rs  intent_submission_test.rs  observability_test.rs  persistence_test.rs  render_tree_test.rs  tenant_db_isolation_test.rs
tools/cli/: Cargo.toml  README.md
tools/cli/src/: dev_supervisor.rs  itest_supervisor.rs  lib.rs  main.rs
tools/cli/src/commands/: gen.rs  mod.rs  run.rs  scaffold.rs  validate.rs
tools/cli/src/commands/dev/: keycloak.rs  mod.rs  quickstart.rs  reset.rs  seed.rs  status.rs  tenant.rs  up.rs
tools/cli/src/commands/itest/: down.rs  mod.rs  run.rs  status.rs  test.rs  up.rs
tools/cli/src/commands/module/: mod.rs  scaffold.rs  validate.rs
tools/cli/src/generators/: k8s.rs  kafka.rs  mod.rs  module_generator.rs  openapi.rs  scaffold.rs
tools/cli/src/types/: manifest.rs  mod.rs  module_manifest.rs
tools/cli/src/validators/: mod.rs  module_validator.rs
tools/cli/tests/: dev_commands_test.rs  integration_test.rs  module_commands_test.rs
(+552 files in other folders)
