[workspace]
resolver = "2"
members = [

    "crates/core",
    "crates/diagnostics",
    "crates/runtime",
    "crates/adapters",
    "crates/ingress",
    "crates/workers",
    "crates/spec_validate",
    "crates/control_plane_db",
    "tools/cli",
    "apps/control-plane",

    "tests/blackbox",
]
exclude = []

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Atlas Team"]
license = "Proprietary"

[workspace.dependencies]
# Workspace crates
atlas-core = { path = "crates/core" }
atlas-diagnostics = { path = "crates/diagnostics" }
atlas-platform-runtime = { path = "crates/runtime" }
atlas-platform-adapters = { path = "crates/adapters" }

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# Testing
mockall = "0.12"
