[package]
name = "atlas-platform-control-plane"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "control-plane"
path = "src/main.rs"

[features]
allow_mvp_shortcuts = ["atlas-core/allow_mvp_shortcuts"]

[dependencies]
atlas-config.workspace = true
atlas-core.workspace = true
atlas-diagnostics.workspace = true
atlas-platform-control-plane-db = { path = "../../crates/control_plane_db" }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
md5 = "0.7"
