[package]
name = "atlas-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
allow_mvp_shortcuts = ["atlas-diagnostics/allow_mvp_shortcuts"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
atlas-diagnostics = { path = "../diagnostics" }

[dev-dependencies]
