[package]
name = "atlas-platform-ingress"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ingress"
path = "src/main.rs"

[dependencies]
atlas-core.workspace = true
atlas-platform-runtime.workspace = true
atlas-platform-adapters = { workspace = true, features = ["postgres"] }
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
anyhow.workspace = true
prometheus.workspace = true
lazy_static.workspace = true

[dev-dependencies]
