[package]
name = "atlas-platform-ingress"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "ingress"
path = "src/main.rs"

[features]
default = []
# Enable test authentication mode. ONLY use in dev/test environments.
# When enabled, allows X-Debug-Principal header to inject principals for testing.
# NEVER enable this feature in production builds.
test-auth = []

[dependencies]
atlas-config.workspace = true
atlas-core.workspace = true
atlas-platform-runtime.workspace = true
atlas-wasm-runtime.workspace = true
atlas-platform-adapters = { workspace = true, features = ["postgres"] }
atlas-platform-catalog.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
anyhow.workspace = true
prometheus.workspace = true
lazy_static.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio-stream.workspace = true
futures.workspace = true
http = "1.0"

# JSON Schema validation
jsonschema = "0.18"

# OIDC/JWT authentication
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
once_cell = "1.19"

[dev-dependencies]
axum-test = "16"
tokio = { workspace = true, features = ["test-util"] }
