[package]
name = "atlas-platform-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
atlas-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
tokio.workspace = true
sqlx = { workspace = true, optional = true }

[features]
postgres = ["sqlx"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
futures.workspace = true
atlas-platform-adapters = { path = "../adapters" }
