[package]
name = "atlas-platform-spec-validate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "spec_validate"
path = "src/lib.rs"

[[bin]]
name = "spec_validate"
path = "src/main.rs"

[dependencies]
atlas-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[dev-dependencies]
