[package]
name = "atlas-blackbox-tests"
version = "0.1.0"
edition = "2021"

[lib]
name = "harness"
path = "harness/mod.rs"

[[test]]
name = "health"
path = "suites/health_test.rs"

[[test]]
name = "intent_submission"
path = "suites/intent_submission_test.rs"

[[test]]
name = "idempotency"
path = "suites/idempotency_test.rs"

[[test]]
name = "authorization"
path = "suites/authorization_test.rs"

[[test]]
name = "observability"
path = "suites/observability_test.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment configuration
dotenvy = "0.15"

# Error handling
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Testing utilities
assert_matches = "1.5"
