[package]
name = "atlas-blackbox-tests"
version = "0.1.0"
edition = "2021"

[lib]
name = "harness"
path = "harness/mod.rs"

[[test]]
name = "health"
path = "suites/health_test.rs"

[[test]]
name = "intent_submission"
path = "suites/intent_submission_test.rs"

[[test]]
name = "idempotency"
path = "suites/idempotency_test.rs"

[[test]]
name = "authorization"
path = "suites/authorization_test.rs"

[[test]]
name = "observability"
path = "suites/observability_test.rs"

[[test]]
name = "authentication"
path = "suites/authentication_test.rs"

[[test]]
name = "closed_loop"
path = "suites/closed_loop_test.rs"

[[test]]
name = "render_tree"
path = "suites/render_tree_test.rs"

[[test]]
name = "persistence"
path = "suites/persistence_test.rs"

[[test]]
name = "tenant_db_isolation"
path = "suites/tenant_db_isolation_test.rs"

[[test]]
name = "catalog_badge_family"
path = "suites/catalog_badge_family_test.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment configuration
atlas-config.workspace = true

# Error handling
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Testing utilities
assert_matches = "1.5"

# Direct Postgres access for tenant DB isolation tests
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
