[package]
name = "atlas-cli"
version = "0.1.0"
edition = "2021"
authors = ["Atlas Team"]

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { version = "1.35", features = ["full"] }
walkdir = "2.4"
handlebars = "5.1"
colored = "2.1"
indexmap = { version = "2.2", features = ["serde"] }
glob = "0.3"
openapiv3 = "2.0"
sha2 = "0.10"
hex = "0.4"
heck = "0.5"
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
jsonschema = "0.18"

[features]
default = ["reqwest"]
url-support = ["reqwest"]

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
